fix(completions): update psc

--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1256,12 +1256,12 @@
     ],
     "description": [
       "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell 补全管理模块\n",
-      "{{ $info.desc }}"
+      "{{ $PSCompletions.info.desc }}"
     ],
     "init_info": [
       "\n<@Yellow>PSCompletions 模块安装警告(仅首次初始化显示):\n",
       "你不应该属于以下情况:\n",
-      "  1. 在以管理员模式启动的 Windows 系统内置的 Windows powershell 中安装 PSCompletions 模块\n",
+      "  1. 在以管理员模式启动的 Windows 系统内置的 Windows PowerShell 中安装 PSCompletions 模块\n",
       "  2. 安装时意外使用了 <@Magenta>-Scope AllUser<@Yellow>\n",
       "如果属于以上情况, 你应该重新安装模块, 使用 <@Magenta>-Scope CurrentUser<@Yellow>, 除非你符合以下前提:\n",
       "  1. 你已知晓以管理员模式安装的 PSCompletions 模块在用户权限下使用会出现权限问题\n",
@@ -1270,7 +1270,7 @@
       "---------------------------------------------------------------------\n",
       "<@Cyan>✨✨✨PSCompletions(<@Magenta>psc<@Cyan>) --- 初始化成功！✨✨✨\n",
       "<@Yellow>以下内容仅首次初始化显示, 你也可以通过运行 <@Magenta>psc<@Yellow> 来看到这些内容<@Cyan>\n",
-      "{{ $info.desc }}"
+      "{{ $PSCompletions.info.desc }}"
     ],
     "err": {
       "network": [
