--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1301,12 +1301,12 @@
     ],
     "description": [
       "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell Completions Manager Module\n",
-      "{{ $info.desc }}"
+      "{{ $PSCompletions.info.desc }}"
     ],
     "init_info": [
       "\n<@Yellow>PSCompletions module install warning (The display is initialized for the first time only):\n",
       "You should not be in the following case:\n",
-      "  1. Install the PSCompletions module in the built-in Windows powershell on the Windows system started in administrator mode.\n",
+      "  1. Install the PSCompletions module in the built-in Windows PowerShell on the Windows system started in administrator mode.\n",
       "  2. The installation is accidentally using <@Magenta>-Scope AllUser<@Yellow>\n",
       "If you are in the case, you should use <@Magenta>-Scope CurrentUser<@Yellow> to reinstall the module, unless you are in the following case:\n",
       "  1. You already know that the PSCompletions module installed in administrator mode can have permission issues when used with user mode.\n",
@@ -1315,7 +1315,7 @@
       "---------------------------------------------------------------------\n",
       "<@Cyan>✨✨✨PSCompletions(<@Magenta>psc<@Cyan>) --- init successfully!✨✨✨\n",
       "<@Yellow>The following is displayed for the first time only, you can also see it by running <@Magenta>psc<@Yellow><@Cyan>\n",
-      "{{ $info.desc }}"
+      "{{ $PSCompletions.info.desc }}"
     ],
     "err": {
       "network": [
