feat(completions): update pwsh
See #16

--- a/completions/pwsh/language/en-US.json
+++ b/completions/pwsh/language/en-US.json
@@ -223,16 +223,20 @@
       ],
       "next": [
         {
-          "name": "Normal"
+          "name": "Normal",
+          "tip": "Normal window."
         },
         {
-          "name": "Hidden"
+          "name": "Hidden",
+          "tip": "Hidden window."
         },
         {
-          "name": "Minimized"
+          "name": "Minimized",
+          "tip": "Minimized window."
         },
         {
-          "name": "Maximized"
+          "name": "Maximized",
+          "tip": "Maximized window."
         }
       ]
     },
@@ -269,7 +273,7 @@
   "info": {
     "completion_info": {
       "url": "https://learn.microsoft.com/powershell/module/microsoft.powershell.core/about/about_pwsh",
-      "description": "PowerShell cli. (pwsh.exe)"
+      "description": "PowerShell CLI. (pwsh.exe)"
     }
   }
 }
