--- a/completions/pwsh/language/zh-CN.json
+++ b/completions/pwsh/language/zh-CN.json
@@ -214,16 +214,20 @@
       ],
       "next": [
         {
-          "name": "Normal"
+          "name": "Normal",
+          "tip": "正常窗口。"
         },
         {
-          "name": "Hidden"
+          "name": "Hidden",
+          "tip": "隐藏窗口。"
         },
         {
-          "name": "Minimized"
+          "name": "Minimized",
+          "tip": "最小化窗口。"
         },
         {
-          "name": "Maximized"
+          "name": "Maximized",
+          "tip": "最大化窗口。"
         }
       ]
     },
@@ -260,7 +264,7 @@
   "info": {
     "completion_info": {
       "url": "https://learn.microsoft.com/powershell/module/microsoft.powershell.core/about/about_pwsh",
-      "description": "PowerShell cli. (pwsh.exe)"
+      "description": "PowerShell 命令行 CLI。(pwsh.exe)"
     }
   }
 }
