feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1361,14 +1361,13 @@
         "(The added completion will be automatically migrated.)\n",
         "<@Magenta>{{ $PSCompletions.version }}<@Cyan> => <@Magenta>{{ $PSCompletions.config.module_update }}\n<@Cyan>",
         "{{ ",
-        "$log=($PSCompletions.get_raw_content(\"$($PSCompletions.path.core)\\log.json\") | ConvertFrom-Json).PSObject.Properties;",
+        "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.core)\\CHANGELOG.json\") | ConvertFrom-Json;",
         "$lang = if($PSCompletions.language -eq 'zh-CN'){ 'zh-CN' }else{ 'en-US' };",
         "$num=1;",
-        "$log | ForEach-Object {",
-        "   if($_.Name -gt $PSCompletions.version){",
-        "      if($num){ \"<@Blue>$($_.Name) : $($_.Value.$($lang))\";$num = 0 }",
-        "      else{ \"`n $($_.Name) : $($_.Value.$($lang))\" }",
-        "   }",
+        "foreach($_ in $version_list) {",
+        "   if($_.version -eq $PSCompletions.version){ break }",
+        "   if($num){ \"<@Blue>$($_.version) : $($_.info.$($lang))\";$num = 0 }",
+        "   else{ \"`n $($_.version) : $($_.info.$($lang))\" }",
         "}",
         "}}\n",
         "<@Cyan>Press <@Magenta>Enter<@Cyan> key to update or <@Magenta>other key<@Cyan> to cancel!"
