--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1315,14 +1315,13 @@
         "<@Yellow>PSCompletions 模块有更新了, 是否更新?(已添加的补全会自动迁移)\n",
         "<@Magenta>{{ $PSCompletions.version }}<@Cyan> => <@Magenta>{{ $PSCompletions.config.module_update }}\n<@Cyan>",
         "{{ ",
-        "$log=($PSCompletions.get_raw_content(\"$($PSCompletions.path.core)\\log.json\") | ConvertFrom-Json).PSObject.Properties;",
+        "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.core)\\CHANGELOG.json\") | ConvertFrom-Json;",
         "$lang = if($PSCompletions.language -eq 'zh-CN'){ 'zh-CN' }else{ 'en-US' };",
         "$num=1;",
-        "$log | ForEach-Object {",
-        "   if($_.Name -gt $PSCompletions.version){",
-        "      if($num){ \"<@Blue>$($_.Name) : $($_.Value.$($lang))\";$num = 0 }",
-        "      else{ \"`n $($_.Name) : $($_.Value.$($lang))\" }",
-        "   }",
+        "foreach($_ in $version_list) {",
+        "   if($_.version -eq $PSCompletions.version){ break }",
+        "   if($num){ \"<@Blue>$($_.version) : $($_.info.$($lang))\";$num = 0 }",
+        "   else{ \"`n $($_.version) : $($_.info.$($lang))\" }",
         "}",
         "}}\n",
         "<@Cyan>按下 <@Magenta>Enter(回车键)<@Cyan> 进行更新，<@Magenta>其他任意键<@Cyan>取消更新!"
