feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -952,6 +952,30 @@
               ]
             },
             {
+              "name": "menu_is_loop",
+              "symbol": "SpaceTab",
+              "tip": [
+                "Current Value: {{ $PSCompletions.config.menu_is_loop }} (Default: 1)\n",
+                "Set whether the menu list is displayed with a loop."
+              ],
+              "next": [
+                {
+                  "name": "0",
+                  "tip": [
+                    "Set to 0\n",
+                    "It means to display the completion menu list without a loop."
+                  ]
+                },
+                {
+                  "name": "1",
+                  "tip": [
+                    "Set to 1 (Default)\n",
+                    "It means to display the completion menu list with a loop."
+                  ]
+                }
+              ]
+            },
+            {
               "name": "menu_above_list_max_count",
               "symbol": "SpaceTab",
               "tip": [
