--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -916,6 +916,24 @@
               ]
             },
             {
+              "name": "menu_is_loop",
+              "symbol": "SpaceTab",
+              "tip": [
+                "当前值: {{ $PSCompletions.config.menu_is_loop }} (默认值为 1)\n",
+                "设置补全菜单列表是否循环显示"
+              ],
+              "next": [
+                {
+                  "name": "0",
+                  "tip": ["设置为 0\n", "补全菜单列表不循环显示"]
+                },
+                {
+                  "name": "1",
+                  "tip": ["设置为 1 (默认值)\n", "补全菜单列表循环显示"]
+                }
+              ]
+            },
+            {
               "name": "menu_above_list_max_count",
               "symbol": "SpaceTab",
               "tip": [
