feat(completions): update git

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -106,6 +106,26 @@
             "U: -e|--edit\n",
             "Open the diff and the index in an editor for further editing."
           ]
+        },
+        {
+          "name": "-u",
+          "alias": ["--update"],
+          "tip": [
+            "U: -u|--update\n",
+            "It will stage modifications and deletions of tracked files (files already in the Git repository) to the staging area, but it does not stage new files."
+          ]
+        },
+        {
+          "name": "--refresh",
+          "tip": "Don't add the file(s), but only refresh their stat() information in the index."
+        },
+        {
+          "name": "--ignore-errors",
+          "tip": [
+            "If some files could not be added because of errors indexing them, do not abort the operation, but continue adding the others.\n",
+            "The command shall still exit with non-zero status.\n",
+            "The configuration variable add.ignoreErrors can be set to true to make this the default behaviour."
+          ]
         }
       ]
     },
