--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -94,6 +94,26 @@
           "name": "-e",
           "alias": ["--edit"],
           "tip": ["U: -e|--edit\n", "打开差异和索引在编辑器中进行进一步编辑"]
+        },
+        {
+          "name": "-u",
+          "alias": ["--update"],
+          "tip": [
+            "U: -u|--update\n",
+            "将工作区中已追踪的文件（已存在于 Git 仓库中的文件）的修改和删除操作添加到暂存区，但不会添加新文件。"
+          ]
+        },
+        {
+          "name": "--refresh",
+          "tip": "不要添加文件，只是在索引中刷新它们的 stat() 信息。"
+        },
+        {
+          "name": "--ignore-errors",
+          "tip": [
+            "如果在索引某些文件时出现错误，导致无法添加这些文件，不要中止操作，而是继续尝试添加其他文件。\n",
+            "命令仍应以非零状态退出。\n",
+            "可以通过设置配置变量 add.ignoreErrors 为 true 来使此行为成为默认设置。"
+          ]
         }
       ]
     },
