fix(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1337,7 +1337,7 @@
       "update": [
         "<@Yellow>Now PSCompletions module can be updated! Update?\n",
         "(The added completion will be automatically migrated.)\n",
-        "<@Magenta>{{ $PSCompletions.version }}<@Cyan> => <@Magenta>{{ $PSCompletions.config.module_update }}\n<@Cyan>",
+        "<@Magenta>{{ $PSCompletions.version }}<@Cyan> => <@Magenta>{{ $PSCompletions.config.enable_module_update }}\n<@Cyan>",
         "{{ ",
         "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.core)\\CHANGELOG.json\") | ConvertFrom-Json;",
         "$lang = if($PSCompletions.language -eq 'zh-CN'){ 'zh-CN' }else{ 'en-US' };",
