--- a/completions/volta/language/en-US.json
+++ b/completions/volta/language/en-US.json
@@ -158,5 +158,23 @@
       "url": "https://volta.sh",
       "description": "volta - Accessible JavaScript Tool Manager"
     }
-  }
+  },
+  "config": [
+    {
+      "name": "disable_hooks",
+      "value": 0,
+      "values": [1, 0],
+      "tip": [
+        "{{",
+        "$_value = $PSCompletions.config.comp_config.volta.disable_hooks;",
+        "if($_value -ne $null){ \"Current Value: <@Magenta>$_value<@Blue>`n\" }",
+        "}}",
+        "Set whether to disable hooks. Default to 0.\n",
+        "The hooks will parse some data and add them in command completions dynamically.\n",
+        "Included data: some versions of the installed tools\n",
+        "Included command: <@Magenta>pin<@Blue>,...\n",
+        "You can disable it by running <@Magenta>psc completion volta disable_hooks 1<@Blue>."
+      ]
+    }
+  ]
 }
