--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -1923,13 +1923,15 @@
       "value": 0,
       "values": [1, 0],
       "tip": [
-        "Current Value: <@Magenta>{{$PSCompletions.config.comp_config.git.disable_hooks}}<@Blue>\n",
+        "{{",
+        "$_value = $PSCompletions.config.comp_config.git.disable_hooks;",
+        "if($_value -ne $null){ \"Current Value: <@Magenta>$_value<@Blue>`n\" }",
+        "}}",
         "Set whether to disable hooks. Default to 0.\n",
-        "The hooks will parse commit/branch/... information, and add them in completions dynamically.\n",
-        "(e.g. <@Magenta>reset<@Blue>,<@Magenta>checkout<@Blue>,<@Magenta>branch<@Blue>...)\n",
-        "For example, enter <@Magenta>git reset<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key,\n",
-        "and you can get the resolved commit completions.\n",
-        "You can disable hooks by running <@Magenta>psc completion git disable_hooks 1<@Blue>.\n",
+        "The hooks will parse some data and add them in command completions dynamically.\n",
+        "Included data: commit,branch,...\n",
+        "Included command: <@Magenta>reset<@Blue>,<@Magenta>checkout<@Blue>,<@Magenta>branch<@Blue>,...\n",
+        "You can disable it by running <@Magenta>psc completion git disable_hooks 1<@Blue>.\n",
         "If you disable it, the <@Magenta>max_commit<@Blue> configuration will also be invalid."
       ]
     },
@@ -1938,7 +1940,10 @@
       "value": 20,
       "values": [-1, 20],
       "tip": [
-        "Current Value: <@Magenta>{{$PSCompletions.config.comp_config.git.max_commit}}<@Blue>\n",
+        "{{",
+        "$_value = $PSCompletions.config.comp_config.git.max_commit;",
+        "if($_value -ne $null){ \"Current Value: <@Magenta>$_value<@Blue>`n\" }",
+        "}}",
         "The maximum number that can be parsed for a project commit. Default to 20.\n",
         "If it is <@Magenta>-1<@Blue>, all commits will be parsed.\n",
         "If there are a large number of project commits, setting <@Magenta>-1<@Blue> will affect the loading speed of the completion."
