--- a/completions/pnpm/language/en-US.json
+++ b/completions/pnpm/language/en-US.json
@@ -254,13 +254,15 @@
       "value": 0,
       "values": [1, 0],
       "tip": [
-        "Current Value: <@Magenta>{{$PSCompletions.config.comp_config.pnpm.disable_hooks}}<@Blue>\n",
+        "{{",
+        "$_value = $PSCompletions.config.comp_config.pnpm.disable_hooks;",
+        "if($_value -ne $null){ \"Current Value: <@Magenta>$_value<@Blue>`n\" }",
+        "}}",
         "Set whether to disable hooks. Default to 0.\n",
-        "The hooks will parse the scripts/dependencies/devDependencies fields in package.json and add them in completions dynamically.\n",
-        "(e.g. <@Magenta>run<@Blue>, <@Magenta>rm<@Blue>/<@Magenta>remove<@Blue>, <@Magenta>update<@Blue>/<@Magenta>up<@Blue>/<@Magenta>upgrade<@Blue>...)\n",
-        "For example, enter <@Magenta>pnpm run<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key, and you can get some extra completions.\n",
-        "(The extra completions come from the scripts command defined in package.json.)\n",
-        "You can disable hooks by running <@Magenta>psc completion pnpm disable_hooks 1<@Blue>."
+        "The hooks will parse some data and add them in command completions dynamically.\n",
+        "Included data: scripts/dependencies/devDependencies fields in package.json\n",
+        "Included command: <@Magenta>run<@Blue>,<@Magenta>rm<@Blue>,<@Magenta>remove<@Blue>,<@Magenta>update<@Blue>,<@Magenta>up<@Blue>,<@Magenta>upgrade<@Blue>,...\n",
+        "You can disable it by running <@Magenta>psc completion pnpm disable_hooks 1<@Blue>."
       ]
     }
   ]
