--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -651,13 +651,15 @@
       "value": 0,
       "values": [1, 0],
       "tip": [
-        "Current Value: <@Magenta>{{$PSCompletions.config.comp_config.scoop.disable_hooks}}<@Blue>\n",
+        "{{",
+        "$_value = $PSCompletions.config.comp_config.scoop.disable_hooks;",
+        "if($_value -ne $null){ \"Current Value: <@Magenta>$_value<@Blue>`n\" }",
+        "}}",
         "Set whether to disable hooks. Default to 0.\n",
-        "The hooks will get the name of the installed apps, cache, etc. and add them in completions dynamically.\n",
-        "(e.g. <@Magenta>uninstall<@Blue>, <@Magenta>update<@Blue>, <@Magenta>bucket<@Blue>, <@Magenta>cache rm<@Blue>, <@Magenta>hold<@Blue>...)\n",
-        "For example, enter <@Magenta>scoop uninstall<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key,\n",
-        "and you can get some extra completions about the name of the installed apps.\n",
-        "You can disable hooks by running <@Magenta>psc completion scoop disable_hooks 1<@Blue>."
+        "The hooks will parse some data and add them in command completions dynamically.\n",
+        "Included data: the name of the installed apps, cache, etc.\n",
+        "Included command: <@Magenta>uninstall<@Blue>,<@Magenta>update<@Blue>,<@Magenta>bucket<@Blue>,<@Magenta>cache rm<@Blue>,<@Magenta>hold<@Blue>,...\n",
+        "You can disable it by running <@Magenta>psc completion scoop disable_hooks 1<@Blue>."
       ]
     }
   ]
