--- a/completions/wsl/language/en-US.json
+++ b/completions/wsl/language/en-US.json
@@ -376,13 +376,15 @@
       "value": 0,
       "values": [1, 0],
       "tip": [
-        "Current Value: <@Magenta>{{$PSCompletions.config.comp_config.wsl.disable_hooks}}<@Blue>\n",
+        "{{",
+        "$_value = $PSCompletions.config.comp_config.wsl.disable_hooks;",
+        "if($_value -ne $null){ \"Current Value: <@Magenta>$_value<@Blue>`n\" }",
+        "}}",
         "Set whether to disable hooks. Default to 0.\n",
-        "The hooks will get the distro name, and add it in completions dynamically.\n",
-        "(e.g. <@Magenta>-d<@Blue>/<@Magenta>--distribution<@Blue>, <@Magenta>-t<@Blue>/<@Magenta>--terminate<@Blue>...)\n",
-        "For example, enter <@Magenta>wsl -d<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key,\n",
-        "and you can get some extra completions about WSL distributions.\n",
-        "You can disable hooks by running <@Magenta>psc completion wsl disable_hooks 1<@Blue>."
+        "The hooks will parse some data and add them in command completions dynamically.\n",
+        "Included data: the distro name\n",
+        "Included command: <@Magenta>-d<@Blue>/<@Magenta>--distribution<@Blue>,<@Magenta>-t<@Blue>/<@Magenta>--terminate<@Blue>,...\n",
+        "You can disable it by running <@Magenta>psc completion wsl disable_hooks 1<@Blue>."
       ]
     }
   ]
